# genemeds-be

./: .gitignore  README.md  build_lambda_zip.sh  pyproject.toml  requirements.txt  schema.sql
.postman/: resources.yaml
app/: config.py  db.py  logging_config.py  main.py  repository.py  schemas.py  secrets.py  security.py  service.py
app/routers/: auth.py  hcp.py  receptionist.py
tests/: conftest.py  test_auth_api.py  test_service.py
